Assignment 1-ML Data Cleaning & Feature Selection

--- a/Assignment_1_Sohni_Rais_002830773.ipynb
+++ b/Assignment_1_Sohni_Rais_002830773.ipynb
@@ -4217,7 +4217,13 @@
         "\n",
         "6)https://colab.research.google.com/drive/1B_LD0maKnH52MehNyms1QxRdU_Vf0ZE7?authuser=1#scrollTo=a3d9f9b3\n",
         "\n",
-        "7)https://github.com/aiskunks/YouTube/blob/main/A_Crash_Course_in_Statistical_Learning/ML_Data_Cleaning_and_Feature_Selection/ML_Data_Cleaning_and_Feature_Selection_Abalone.ipynb"
+        "7)https://github.com/aiskunks/YouTube/blob/main/A_Crash_Course_in_Statistical_Learning/ML_Data_Cleaning_and_Feature_Selection/ML_Data_Cleaning_and_Feature_Selection_Abalone.ipynb\n",
+        "\n",
+        "8)For certain queries took help from chatgpt\n",
+        "\n",
+        "9)https://scikit-learn.org/stable/\n",
+        "\n",
+        "10)https://eli5.readthedocs.io/"
       ],
       "metadata": {
         "id": "liO4XAvMpJjQ"
